--- a/app/views/apprenticeships/home/find_apprentices.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices.html.erb
@@ -3,23 +3,39 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
- <p class="govuk-heading-s"><%= t('Do you know the apprenticeship standard that you would like training for ?') %></p>
- <div class="govuk-radios">
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-1" name="changed-name" type="radio" value="yes">
-        <label class="govuk-label govuk-radios__label" for="changed-name-1">
-                Yes
-        </label>
-      </div>
+      <form action="find_apprentices2">
+      
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+            
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m govuk-!-font-weight-bold">
+              <h1 class="govuk-fieldset__heading"> 
+                <%= t('.find_1_legend') %>
+              </h1>
+            </legend>
+            <div class="govuk-radios">
 
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
-        <label class="govuk-label govuk-radios__label" for="changed-name-2">
-	         No
-        </label>
-      </div>
-</div>
-<br/>
-<br/>
-<%= link_to t('Continue'), 'find_apprentices2' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
-</div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="ap-std-1" name="ap-std" type="radio" value="yes">
+                <label class="govuk-label govuk-radios__label" for="ap-std-1">
+                        Yes
+                </label>              
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="ap-std-2" name="ap-std" type="radio" value="no">
+                <label class="govuk-label govuk-radios__label" for="ap-std-2">
+                  No
+                </label>
+              </div>
+
+            </div>
+
+          </fieldset>
+        </div> 
+
+        <%= render 'layouts/submit-btn', text: t('.find_1_btn')%>
+
+      </form>
+
+     </div>
+  </div>
