HTML/CSS/txt: Find Apprenticeships 2

--- a/app/views/apprenticeships/home/find_apprentices.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices.html.erb
@@ -3,7 +3,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="find_apprentices2">
+      <form action="find_apprentices2" method="">
       
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
@@ -33,7 +33,7 @@
           </fieldset>
         </div> 
 
-        <%= render 'layouts/submit-btn', text: t('.find_1_btn')%>
+        <%= render 'layouts/submit-btn', text: t('common.continue')%>
 
       </form>
 
