--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -33,7 +33,7 @@
     </div>
 
     <div class="govuk-form-group CCS-AT-results-filters__panel">
-      <fieldset class="govuk-fieldset CCS-AT-checkbox-accordian" aria-describedby="waste-hint">
+      <fieldset class="govuk-fieldset CCS-AT-checkbox-accordian">
         <button type="button" class="CCS-AT-show CCS-AT-show--fontsize" aria-expanded="true" aria-controls="c1">
           <%= t('.levels_label') %> 
           <span>&nbsp;Show</span>
@@ -74,7 +74,7 @@
 
     <!-- start Routes filters -->
     <div class="govuk-form-group CCS-AT-results-filters__panel">
-      <fieldset class="govuk-fieldset CCS-AT-checkbox-accordian" aria-describedby="waste-hint">
+      <fieldset class="govuk-fieldset CCS-AT-checkbox-accordian">
         <button type="button" class="CCS-AT-show CCS-AT-show--fontsize" aria-expanded="true" aria-controls="c2">
           <%= t('.routes_label') %>
         <span>&nbsp;Show</span>
