--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -31,6 +31,7 @@
 @import "master-vendor-record/master-vendor-record";
 @import "mc-supplier-record/mc-supplier-record";
 @import "neutral-vendor-record/neutral-vendor-record";
+@import "pagination/pagination";
 @import "phase-banner/phase-banner";
 @import "sidebar/sidebar";
 @import "st-supplier-page/st-supplier-page";
