--- a/app/views/facilities_management/select_locations/select_location.html.erb
+++ b/app/views/facilities_management/select_locations/select_location.html.erb
@@ -13,7 +13,6 @@
   </div>
 </div>
 
-
 <div>
   <fieldset class="govuk-fieldset" aria-describedby="">
     <h1 class="govuk-heading-xl">
@@ -88,11 +87,11 @@
       <div class="filter-selection__header">
         <a id="remove-all-link" name="remove-all-link" class="remove-all js-filter" href="">Remove all</a>
         <h2 class="font-weight-700">
-          <span id="selected-location-count" name="selected-location-count" class="font-size--18">0</span>
+          <span id="selected-location-count" class="font-size--18">0</span>
           Locations selected
         </h2>
       </div>
     </header>
-    <ul id="selected-fm-locations" name="selected-fm-locations" class="govuk-!-padding-0 font-size--10"></ul>
+    <ul id="selected-fm-locations" class="govuk-!-padding-0 font-size--10"></ul>
   </div>
 </div>
