--- a/app/views/apprenticeships/home/find_apprentices3.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices3.html.erb
@@ -1,21 +1,24 @@
 <%= content_for :page_title, t('.page_title') %>
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
- 
-  <%= form_tag apprenticeships_search_results_path, method: :get do %>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
-  <label class="govuk-label govuk-label--m" for="search">
-    <%= t('.Briefly outline your training requirements') %>
-  </label>
-  <span id="more-detail-hint" class="govuk-hint">
-    For example, the apprenticeship standard, level and specific requirements fromn the training provider.
-  </span>
-  <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
-</div> 
-<br/>
-<% end %>
-</div> 
-<%= link_to t('Continue'), 'find_apprentices4' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
-</div> 
+     <form action="find_apprentices4" method="">
+
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--m govuk-!-font-weight-bold" for="more-detail3">
+            <%= t('.outline_your_training_hint') %>
+          </label>
+          <span id="more-detail-hint3" class="govuk-hint">
+            <%= t('.outline_your_training') %>
+          </span>
+          <textarea class="govuk-textarea" id="more-detail3" name="more-detail3" rows="5" aria-describedby="more-detail-hint3"></textarea>
+        </div>
+
+        <%= render 'layouts/submit-btn', text: t('common.continue')%>
+
+      </form>
+
+    </div>
+  </div>
