--- a/app/views/apprenticeships/home/index.html.erb
+++ b/app/views/apprenticeships/home/index.html.erb
@@ -23,7 +23,7 @@
         <li><%= t('.know_the_apprenticeship_standards') %></li>
         <li><%= t('.know_how_you_would_like_the_training_to_be_delivered') %></li>
         <li><%= t('.know_weather_you_would_like_shared_training') %></li>
-        <li><%= t('.have_read_and_agreed') %></li>
+        <li><%= t('.have_read_and_agreed_html', url: 'https://www.gov.uk/help/terms-conditions') %></li>
       </ul>
 
       <div class="govuk-warning-text">
