--- a/app/views/apprenticeships/home/find_apprentices4.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices4.html.erb
@@ -2,7 +2,7 @@
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
 <%= form_tag apprenticeships_search_results_path, method: :get do %>
-
+Page 4<br>
   <label class="govuk-label govuk-label--xl" for="search">
     <%= t('Find an apprenticeship standard') %>
   </label>
