--- a/app/views/apprenticeships/home/find_apprentices4.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices4.html.erb
@@ -1,36 +1,93 @@
 <%= content_for :page_title, t('.page_title') %>
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
-<%= form_tag apprenticeships_search_results_path, method: :get do %>
-Page 4<br>
-  <label class="govuk-label govuk-label--xl" for="search">
-    <%= t('Find an apprenticeship standard') %>
-  </label>
-<div class="govuk-tabs" data-module="tabs">
-  <h2 class="govuk-tabs__title">
-    Contents
-  </h2>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
 
-  <ul class="govuk-tabs__list">
-    <li class="govuk-tabs__list-item">
-      <a class="govuk-tabs__tab govuk-tabs__tab--selected" href="#past-day">
-        Search
-      </a>
-    </li>
-    <li class="govuk-tabs__list-item">
-      <a class="govuk-tabs__tab" href="#past-week">
-        Browse
-      </a>
-    </li>
-  </ul>
-   <section class="govuk-tabs__panel" id="keyword-search">
-        <h2 class="govuk-heading-l"><%= t('Keyword search') %></h2>
-   <label class="govuk-label" for="event-name">
-    Keyword search 
-  </label>
-  <input class="govuk-input" id="event-name" name="event-name" type="text">
-<br/>
-<br/>
-<%= link_to t('Search'), 'find_apprentices5' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+      <h1 class="govuk-heading-xl"><%= t('.find_apprenticeship-std') %></h1>
 
-<% end %>
+    </div>
+  </div>    
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+
+      <div class="govuk-tabs" data-module="tabs">
+        <h2 class="govuk-tabs__title ccs-no-print">
+          <%= t('.find_apprenticeship-tab-title') %>
+        </h2>
+
+        <ul class="govuk-tabs__list">
+          <li class="govuk-tabs__list-item">
+            <a class="govuk-tabs__tab govuk-tabs__tab--selected" href="#search-tab">
+              <%= t('.search_tab_label') %>
+            </a>
+          </li>
+          <li class="govuk-tabs__list-item">
+            <a class="govuk-tabs__tab" href="#browse-tab">
+              <%= t('.browse_tab_label') %>
+            </a>
+          </li>
+        </ul>
+
+        <section class="govuk-tabs__panel" id="search-tab">
+          <%= form_tag apprenticeships_search_results_path, method: :get do %>
+
+            <div class="govuk-form-group">
+              <h1 class="govuk-label-wrapper">
+                <label class="govuk-label govuk-label--m govuk-!-font-weight-bold" for="search">
+                  <%= t('.search_label') %>
+                </label>
+              </h1>  
+              <%= text_field_tag :search, params[:search], class: 'govuk-input CCS-search-icon' %>
+            </div>
+            
+            <%= render 'layouts/submit-btn', text: t('common.search')%>
+
+          <% end %>
+        </section>
+
+        <section class="govuk-tabs__panel govuk-tabs__panel--hidden" id="browse-tab">
+          <%= form_tag apprenticeships_search_results_path, method: :get do %>
+
+            <div class="govuk-form-group">
+              <fieldset class="govuk-fieldset">
+
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m govuk-!-font-weight-bold">
+                  <h1 class="govuk-fieldset__heading">
+                    Browse by route
+                  </h1>
+                </legend>
+
+                <div class="govuk-checkboxes">
+                  <% browse_routes.each do |rating| %>
+                  <div class="govuk-checkboxes__item">
+                    <%= check_box_tag(
+                              "rating[]",
+                              rating,
+                              false,
+                              class: "govuk-checkboxes__input",
+                              id: "rating_#{rating}"
+                          ) %>
+                      <label class="govuk-label govuk-checkboxes__label" for="rating_<%= rating %>">
+                        <%= rating %>
+                      </label>
+                  </div>
+                  <% end %>
+                </div>
+
+              </fieldset>
+            </div>
+
+            <%= render 'layouts/submit-btn', text: t('common.browse')%>
+
+          <% end %>
+        </section>
+
+      </div>
+
+
+
+    </div>
+  </div>
+  
