--- a/app/views/apprenticeships/home/find_apprentices4.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices4.html.erb
@@ -39,7 +39,7 @@
                   <%= t('.search_label') %>
                 </label>
               </h1>  
-              <%= text_field_tag :search, params[:search], class: 'govuk-input CCS-search-icon' %>
+              <%= text_field_tag :search, params[:search], class: 'govuk-input ccs-search-icon' %>
             </div>
             
             <%= render 'layouts/submit-btn', text: t('common.search')%>
