--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -13,33 +13,33 @@
   </div>
 </div>
 
-<div class="govuk-grid-row govuk-!-padding-top-4 CCS-AT-results-pg">
+<div class="govuk-grid-row govuk-!-padding-top-4 ccs-at-results-pg">
   <%= form_tag apprenticeships_search_path, method: :get, class: 'supplier-record__calculator-form' do %>
   
-  <section id="CCS-AT-results-filters" class="govuk-grid-column-one-third CCS-AT-results-filters">
+  <section id="ccs-at-results-filters" class="govuk-grid-column-one-third ccs-at-results-filters">
     <!-- start Levels filters -->
-    <div class="govuk-form-group CCS-AT-results-filters__panel CCS-AT-results-filters--padding">
+    <div class="govuk-form-group ccs-at-results-filters__panel ccs-at-results-filters--padding">
       <label class="govuk-label govuk-label--s" for="search">
         <%= t('.keyword_search_label') %>
       </label>
-      <%= text_field_tag :search, params[:keywordSearch], class: 'govuk-input CCS-search-icon' %>
+      <%= text_field_tag :search, params[:keywordSearch], class: 'govuk-input ccs-search-icon' %>
     </div>
 
-    <div class="govuk-form-group CCS-AT-results-filters__heading-bloc">
+    <div class="govuk-form-group ccs-at-results-filters__heading-bloc">
       <h2 class="govuk-!-width-two-thirds govuk-heading-m">
         <%= t('.apply_filters_label') %>
       </h2>
       <%= link_to t('.clear_filters_link'), apprenticeships_search_path, role: 'button', class: 'govuk-!-width-one-third govuk-link--no-visited-state ccs-no-print', id: 'ccs-clear-filters' %>
     </div>
 
-    <div class="govuk-form-group CCS-AT-results-filters__panel">
-      <fieldset class="govuk-fieldset CCS-AT-checkbox-accordian">
-        <button type="button" class="CCS-AT-show CCS-AT-show--fontsize" aria-expanded="true" aria-controls="c1">
+    <div class="govuk-form-group ccs-at-results-filters__panel">
+      <fieldset class="govuk-fieldset ccs-at-checkbox-accordian">
+        <button type="button" class="ccs-at-show ccs-at-show--fontsize" aria-expanded="true" aria-controls="c1">
           <%= t('.levels_label') %> 
           <span>&nbsp;Show</span>
         </button>
 
-        <div id="c1" class="CCS-AT-checkboxes-wrap">
+        <div id="c1" class="ccs-at-checkboxes-wrap">
           <div class="govuk-checkboxes">
             <% levels.each do |level| %>
               <div class="govuk-checkboxes__item">
@@ -73,14 +73,14 @@
     </div>  
 
     <!-- start Routes filters -->
-    <div class="govuk-form-group CCS-AT-results-filters__panel">
-      <fieldset class="govuk-fieldset CCS-AT-checkbox-accordian">
-        <button type="button" class="CCS-AT-show CCS-AT-show--fontsize" aria-expanded="true" aria-controls="c2">
+    <div class="govuk-form-group ccs-at-results-filters__panel">
+      <fieldset class="govuk-fieldset ccs-at-checkbox-accordian">
+        <button type="button" class="ccs-at-show ccs-at-show--fontsize" aria-expanded="true" aria-controls="c2">
           <%= t('.routes_label') %>
         <span>&nbsp;Show</span>
         </button>
 
-        <div id="c2" class="CCS-AT-checkboxes-wrap">
+        <div id="c2" class="ccs-at-checkboxes-wrap">
           <div class="govuk-checkboxes">
             <% routes.each do |route| %>
               <div class="govuk-checkboxes__item">
@@ -103,13 +103,13 @@
 
   </section>
 
-  <section id="CCS-AT-search-results" class="govuk-grid-column-two-thirds CCS-AT-search-results">
+  <section id="ccs-at-search-results" class="govuk-grid-column-two-thirds ccs-at-search-results">
 
 
 
 
     <div class="govuk-form-group">
-      <div class="CCS-AT-search-results__sort">
+      <div class="ccs-at-search-results__sort">
         <label class="govuk-label" for="sort">
           <%= t('.sort_by_label') %>
         </label>
@@ -121,15 +121,15 @@
 
 
 
-    <h2 class="govuk-heading-m CCS-AT-remove">Results</h2>
+    <h2 class="govuk-heading-m ccs-at-remove">Results</h2>
 
-    <ul class="CCS-AT-results-list">
+    <ul class="ccs-at-results-list">
       <% results.each do |result| %>
         <%= render 'search_apprenticeship', result: result %>
       <% end %>
     </ul>
 
-    <%= link_to '#', class: 'govuk-link govuk-!-font-size-19 govuk-link--no-visited-state CCS-AT-next' do %>
+    <%= link_to '#', class: 'govuk-link govuk-!-font-size-19 govuk-link--no-visited-state ccs-at-next' do %>
       <%= t('.next')%><span>&nbsp;&rarr;</span>
     <% end %>
   </section>
