--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -78,7 +78,7 @@ $govuk-link-visited-colour: #4c2c92;
 
 /* global across framework styles: start */
 
-.CSS-no-underline {
+.css-no-underline {
   text-decoration: none; 
 }
 
