--- a/app/views/apprenticeships/home/find_apprentices.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices.html.erb
@@ -33,7 +33,7 @@
           </fieldset>
         </div> 
 
-        <%= render 'layouts/submit-btn', text: t('common.continue')%>
+        <%= render 'layouts/button', text: t('common.continue')%>
 
       </form>
 
