--- a/app/views/apprenticeships/home/find_apprentices3.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices3.html.erb
@@ -16,7 +16,7 @@
           <textarea class="govuk-textarea" id="more-detail3" name="more-detail3" rows="5" aria-describedby="more-detail-hint3"></textarea>
         </div>
 
-        <%= render 'layouts/submit-btn', text: t('common.continue')%>
+        <%= render 'layouts/button', text: t('common.continue')%>
 
       </form>
 
