--- a/app/views/apprenticeships/home/find_apprentices4.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices4.html.erb
@@ -42,7 +42,7 @@
               <%= text_field_tag :search, params[:search], class: 'govuk-input ccs-search-icon' %>
             </div>
             
-            <%= render 'layouts/submit-btn', text: t('common.search')%>
+            <%= render 'layouts/button', text: t('common.search')%>
 
           <% end %>
         </section>
@@ -79,7 +79,7 @@
               </fieldset>
             </div>
 
-            <%= render 'layouts/submit-btn', text: t('common.browse')%>
+            <%= render 'layouts/button', text: t('common.browse')%>
 
           <% end %>
         </section>
