--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -18,7 +18,7 @@
   
   <section id="ccs-at-results-filters" class="govuk-grid-column-one-third ccs-at-results-filters">
     <!-- start Levels filters -->
-    <div class="govuk-form-group ccs-at-results-filters__panel ccs-at-results-filters--padding">
+    <div class="govuk-form-group ccs-at-results-filters__panel">
       <label class="govuk-label govuk-label--s" for="search">
         <%= t('.keyword_search_label') %>
       </label>
@@ -34,13 +34,14 @@
 
     <div class="govuk-form-group ccs-at-results-filters__panel">
       <fieldset class="govuk-fieldset ccs-at-checkbox-accordian">
-        <button type="button" class="ccs-at-show ccs-at-show--fontsize" aria-expanded="true" aria-controls="c1">
+        <button type="button" class="ccs-at-btn-toggle" aria-expanded="true" aria-controls="c1">
           <%= t('.levels_label') %> 
           <span>&nbsp;Show</span>
         </button>
 
         <div id="c1" class="ccs-at-checkboxes-wrap">
           <div class="govuk-checkboxes">
+            
             <% levels.each do |level| %>
               <div class="govuk-checkboxes__item">
                 <%= check_box_tag(
@@ -55,7 +56,11 @@
                 </label>
               </div>
             <% end %>
+
           </div>
+
+          <%= render 'layouts/button', text: t('common.apply_filters')%>
+
         </div>
       </fieldset>
 
@@ -75,13 +80,14 @@
     <!-- start Routes filters -->
     <div class="govuk-form-group ccs-at-results-filters__panel">
       <fieldset class="govuk-fieldset ccs-at-checkbox-accordian">
-        <button type="button" class="ccs-at-show ccs-at-show--fontsize" aria-expanded="true" aria-controls="c2">
+        <button type="button" class="ccs-at-btn-toggle" aria-expanded="true" aria-controls="c2">
           <%= t('.routes_label') %>
         <span>&nbsp;Show</span>
         </button>
 
         <div id="c2" class="ccs-at-checkboxes-wrap">
           <div class="govuk-checkboxes">
+
             <% routes.each do |route| %>
               <div class="govuk-checkboxes__item">
                 <%= check_box_tag(
@@ -96,7 +102,11 @@
                 </label>
               </div>
             <% end %>
+
           </div>
+
+          <%= render 'layouts/button', text: t('common.apply_filters')%>
+
         </div>
       </fieldset>
     </div>         
@@ -104,9 +114,6 @@
   </section>
 
   <section id="ccs-at-search-results" class="govuk-grid-column-two-thirds ccs-at-search-results">
-
-
-
 
     <div class="govuk-form-group">
       <div class="ccs-at-search-results__sort">
@@ -116,10 +123,6 @@
         <%= select_tag :sort, options_for_select(sort_option), class: 'govuk-select' %>
       </div>
     </div>
-
-
-
-
 
     <h2 class="govuk-heading-m ccs-at-remove">Results</h2>
 
