--- a/app/assets/apprenticeships/apprenticeships.scss
+++ b/app/assets/apprenticeships/apprenticeships.scss
@@ -72,8 +72,9 @@ the import call to the parent GOVUK component) */
 
 /* 4. Bespoke css overrides which THIS MODULE may require */
 
+$results-filters-labels-m: 17px;
+
 .ccs-at-results-filters {
-    $results-filters-labels-m: 17px; 
 
     .ccs-at-results-filters__panel {
         background-color: govuk-colour("grey-4"); 
@@ -91,40 +92,30 @@ the import call to the parent GOVUK component) */
         .govuk-checkboxes {
             background-color: govuk-colour("white"); 
             margin-top: govuk-spacing(1); 
-        }
 
-        .govuk-checkboxes__input + .govuk-checkboxes__label::before, 
-        .govuk-checkboxes__input {//the tick box border
-            height: 20px; 
-            width: 20px; 
-            top: 11px; 
-            left: 10px; 
-            border-width: 1px; 
-        } 
+            &.css-govuk-checkboxes--s {
+                .govuk-checkboxes__input + .govuk-checkboxes__label::before, 
+                .govuk-checkboxes__input {
+                    top: 11px; 
+                    left: 10px; 
+                }
 
-        .govuk-checkboxes__input:checked + .govuk-checkboxes__label::after {//the tick
-            left: 13px; 
-            top: 15px; 
-            width: 11px; 
-            height: 5px; 
-            border-width: 0 0 3px 3px; 
-        } 
+                .govuk-checkboxes__input:checked + .govuk-checkboxes__label::after {//the tick
+                    left: 13px;
+                }
 
-        .govuk-checkboxes__label {
-            padding: 5px; 
-            font-size: $results-filters-labels-m; 
-            width: 100%; 
-        }
+                .govuk-checkboxes__item { 
+                    margin-bottom: 0; 
+                    padding: 5px 10px 0 35px;  
+                    border-top: 1px solid $govuk-border-colour; 
+                    padding-left: 35px; 
 
-        .govuk-checkboxes__item { 
-            margin-bottom: 0; 
-            padding: 5px 10px 0 35px;  
-            border-top: 1px solid $govuk-border-colour; 
-
-            &:first-child {
-                border-top: none; 
+                    &:first-child {
+                        border-top: none; 
+                    }
+                }
             }
-        } 
+        }
 
         .govuk-input {
             border-width: 1px; 
@@ -322,19 +313,6 @@ body.js-enabled .ccs-at-results-filters .ccs-at-checkbox-accordian {
     display: none; 
 }
 
-.ccs-search-icon {
-    display: block; 
-    //::after icon over input
-}
-
-.ccs-no-underline {
-    text-decoration: none; 
-
-    /*&:hover {
-        text-decoration: underline;
-    }*/
-}
-
 .ccs-at-remove {
     display: block; 
     position: absolute; 
@@ -351,22 +329,27 @@ body.js-enabled .ccs-at-results-filters .ccs-at-checkbox-accordian {
     clear: left; 
 }
 
-
-
-
-
-
-
-
-
-
-
-
 @media (min-width: 40.0625em){//desktop: stop horizonal jumping, between pgs
   .govuk-fieldset__heading {
       max-width: 445px; 
     }
+} 
+
+/* AT overrides start */
+
+.govuk-input, 
+.govuk-textarea, 
+.govuk-radios__input, 
+.js-enabled .govuk-tabs__list, 
+.js-enabled .govuk-tabs__panel, 
+.js-enabled .govuk-tabs__tab[aria-selected="true"] {
+    border-width: 1.5px !important; 
 }
+.js-enabled .govuk-tabs__tab[aria-selected="true"]{
+    margin-bottom: -2px !important;
+}
+
+/* AT overrides end */
 
 
 /* ccs-no-print */
@@ -378,6 +361,76 @@ body.js-enabled .ccs-at-results-filters .ccs-at-checkbox-accordian {
             
         }
     }
+}
+
+
+
+
+
+
+.govuk-input.ccs-govuk-input--search {
+    $search01: govuk-spacing(3); 
+    $search02: govuk-spacing(7);
+
+    padding-right: $search02;
+
+    & + input {
+        width: ($search02 - 2);
+        height: ($search02 - 2); 
+        top: ((-$search02) + 1); 
+        margin-right: 1px; 
+        text-indent: -3000px;
+        position: relative;
+        float: right;
+        cursor: pointer;
+        border: 0; 
+        background: govuk-colour("grey-1") url('https://www.digitalmarketplace.service.gov.uk/static/images/search-button.png') no-repeat 3px (-$search01); //temporary colour scheme and image!
+
+        &:focus {
+            outline: 3px solid govuk-colour("yellow");
+            outline-offset: 0; 
+            max-width: ($search02 - 2) !important; //for -moz-
+        } 
+    }
+}
+
+.ccs-no-underline {
+    text-decoration: none; 
+}
+
+.css-govuk-checkboxes--s {
+
+    .govuk-checkboxes__input + .govuk-checkboxes__label::before, 
+    .govuk-checkboxes__input {//the tick box border
+        height: 20px; 
+        width: 20px; 
+        top: 11px; 
+        left: 0; 
+        border-width: 1px; 
+    } 
+
+    .govuk-checkboxes__input:checked + .govuk-checkboxes__label::after {//the tick
+        left: 3px; 
+        top: 15px; 
+        width: 11px; 
+        height: 5px; 
+        border-width: 0 0 3px 3px; 
+    } 
+
+    .govuk-checkboxes__label {
+        padding: 5px; 
+        font-size: $results-filters-labels-m; 
+        width: 100%; 
+    }
+
+    .govuk-checkboxes__item { 
+        margin-bottom: 0; 
+        padding-top: 5px; 
+        padding-right: 10px; 
+        padding-bottom: 0; 
+        padding-left: 25px;  
+    } 
+
 }
 
 
