--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -22,7 +22,8 @@
       <label class="govuk-label govuk-label--s" for="search">
         <%= t('.keyword_search_label') %>
       </label>
-      <%= text_field_tag :search, params[:keywordSearch], class: 'govuk-input ccs-search-icon' %>
+      <%= text_field_tag :keywords, params[:keywordSearch], type: 'search', class: 'govuk-input ccs-govuk-input--search', maxlength: '200' %> 
+      <input class="submit" type="submit" value="<%= t('common.search') %>">
     </div>
 
     <div class="govuk-form-group ccs-at-results-filters__heading-bloc">
@@ -40,7 +41,7 @@
         </button>
 
         <div id="c1" class="ccs-at-checkboxes-wrap">
-          <div class="govuk-checkboxes">
+          <div class="govuk-checkboxes css-govuk-checkboxes--s">
             
             <% levels.each do |level| %>
               <div class="govuk-checkboxes__item">
@@ -56,7 +57,6 @@
                 </label>
               </div>
             <% end %>
-
           </div>
 
           <%= render 'layouts/button', text: t('common.apply_filters')%>
@@ -82,11 +82,11 @@
       <fieldset class="govuk-fieldset ccs-at-checkbox-accordian">
         <button type="button" class="ccs-at-btn-toggle" aria-expanded="true" aria-controls="c2">
           <%= t('.routes_label') %>
-        <span>&nbsp;Show</span>
+          <span>&nbsp;Show</span>
         </button>
 
         <div id="c2" class="ccs-at-checkboxes-wrap">
-          <div class="govuk-checkboxes">
+          <div class="govuk-checkboxes css-govuk-checkboxes--s">
 
             <% routes.each do |route| %>
               <div class="govuk-checkboxes__item">
@@ -117,10 +117,10 @@
 
     <div class="govuk-form-group">
       <div class="ccs-at-search-results__sort">
-        <label class="govuk-label" for="sort">
+        <label class="govuk-label" for="sortBox">
           <%= t('.sort_by_label') %>
         </label>
-        <%= select_tag :sort, options_for_select(sort_option), class: 'govuk-select' %>
+        <%= select_tag :sortBox, options_for_select(sort_option), class: 'govuk-select' %>
       </div>
     </div>
 
