en.yml file errors corrected

--- a/app/views/apprenticeships/home/building_services.html.erb
+++ b/app/views/apprenticeships/home/building_services.html.erb
@@ -16,7 +16,7 @@
 <br/>
 <br/>
 </div>
- <%= link_to t('Add requirements and find training providers'), 'requirements', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+ <%= link_to t('Add requirements and find training providers'), 'requirements', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 <br/>
 Summary of this apprenticeship standard
 <br/>
