--- a/app/views/apprenticeships/home/find_apprentices4.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices4.html.erb
@@ -36,7 +36,7 @@
             <div class="govuk-form-group">
               <h1 class="govuk-label-wrapper">
                 <label class="govuk-label govuk-label--m govuk-!-font-weight-bold" for="search">
-                  <%= t('.search_label') %>
+                  <%= t('common.search') %>
                 </label>
               </h1>  
               <%= text_field_tag :search, params[:search], class: 'govuk-input ccs-search-icon' %>
@@ -55,7 +55,7 @@
 
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m govuk-!-font-weight-bold">
                   <h1 class="govuk-fieldset__heading">
-                    <%= t('.browse_by_route_title') %>
+                    <%= t('.title_browse_by_route') %>
                   </h1>
                 </legend>
 
