--- a/app/views/apprenticeships/home/find_apprentices6.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices6.html.erb
@@ -33,5 +33,5 @@
 <br/>
 
 
- <%= link_to t('.Search'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('Building') %>
+ <%= link_to t('common.search'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button' %>
 <% end %>
