--- a/app/views/apprenticeships/home/requirements.html.erb
+++ b/app/views/apprenticeships/home/requirements.html.erb
@@ -104,7 +104,7 @@
 </div>
 <br/>
 <br/>
-      <%= link_to t('Find training providers'), 'requirement', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.start_finding_supply_teachers') %>
+      <%= link_to t('Find training providers'), 'requirement', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
     </div>
   </div>
