--- a/app/views/apprenticeships/home/supplier_search2.html.erb
+++ b/app/views/apprenticeships/home/supplier_search2.html.erb
@@ -195,7 +195,7 @@
               <%= render 'search_apprenticeship', result: result %>
             <% end %>
 
-            <%= link_to t('.next'), '#', class: 'govuk-link' %>
+            <%= link_to t('common.next'), '#', class: 'govuk-link' %>
           </div>
         </div>
       </div>
