--- a/app/views/apprenticeships/home/understanding.html.erb
+++ b/app/views/apprenticeships/home/understanding.html.erb
@@ -17,6 +17,6 @@
   </span>
 </div> 
 </div> 
- <%= link_to t('.Back to start'), 'training_provider' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+ <%= link_to t('.Back to start'), 'training_provider' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 <% end %>
 </div> 
