--- a/app/views/apprenticeships/home/find_apprentices.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :page_section, t('requirements.page_section') %>
+<%= content_for :page_section, t('apprenticeships.page_section') %>
   
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
