--- a/app/views/apprenticeships/home/index.html.erb
+++ b/app/views/apprenticeships/home/index.html.erb
@@ -34,8 +34,7 @@
         </strong>
       </div>
 
-
-      <%= link_to t('Continue'), 'find_apprentices' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+      <%= link_to t('common.continue'), 'find_apprentices' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('common.continue') %>
 
     </div>
   </div>
