--- a/app/views/apprenticeships/home/sorry.html.erb
+++ b/app/views/apprenticeships/home/sorry.html.erb
@@ -17,6 +17,6 @@ pe<%= content_for :page_title, t('.page_title') %>
   </span>
 </div> 
 </div> 
- <%= link_to t('.Continue'), 'training_provider' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+ <%= link_to t('common.continue'), 'training_provider' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 <% end %>
 </div> 
