--- a/app/views/apprenticeships/home/supplier_search.html.erb
+++ b/app/views/apprenticeships/home/supplier_search.html.erb
@@ -10,7 +10,7 @@
     </p>
     <p><%= t('.apply_filters') %></p>
 
-<%= link_to t('Download the suppliers list'), 'sorry' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+<%= link_to t('Download the suppliers list'), 'sorry' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
     <%= form_tag apprenticeships_search_path, method: :get, class: 'supplier-record__calculator-form' do %>
       <div class="govuk-grid-row">
@@ -197,7 +197,7 @@
               <%= render 'search_apprenticeship', result: result %>
             <% end %>
 
-            <%= link_to t('.next'), '#', class: 'govuk-link' %>
+            <%= link_to t('common.next'), '#', class: 'govuk-link' %>
           </div>
         </div>
       </div>
