--- a/app/views/apprenticeships/home/training_details.html.erb
+++ b/app/views/apprenticeships/home/training_details.html.erb
@@ -9,5 +9,5 @@
     For example, the apprenticeship standard, level and specific requirements fromn the training provider.
   </span>
 </div> 
- <%= link_to t('.Continue'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+ <%= link_to t('common.continue'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('common.continue') %>
 <% end %>
