--- a/app/views/supply_teachers/suppliers/_branch.html.erb
+++ b/app/views/supply_teachers/suppliers/_branch.html.erb
@@ -6,9 +6,8 @@
         <h3 class="govuk-heading-s supplier-record__branch"><%= t('supply_teachers.suppliers.all_suppliers.branch') %>: <span class="supplier-record__branch-name"><%= branch.name %></span></h3>
       <% end %>
       <p>
-        <%= branch.region %><br />
+        <strong>Region:</strong> <%= branch.region %><br />
         <%= branch.address_1 %>, <%= branch.address_2 %>, <%= branch.town %>, <%= branch.county %>, <%= branch.postcode %><br />
-        <strong>Accreditation body:</strong>
       </p>
     </div>
   </div>
