--- a/app/views/apprenticeships/home/find_apprentices5.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices5.html.erb
@@ -1,68 +1,54 @@
 <%= content_for :page_title, t('.page_title') %>
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
-<%= form_tag apprenticeships_search_results_path, method: :get do %>
-
-  <label class="govuk-label govuk-label--xl" for="search">
-    <%= t('Find an apprenticeship standard') %>
-  </label>
-<div class="govuk-tabs" data-module="tabs">
-  <h2 class="govuk-tabs__title">
-    Contents
-  </h2>
-
-  <ul class="govuk-tabs__list">
-    <li class="govuk-tabs__list-item">
-      <a class="govuk-tabs__tab govuk-tabs__tab--selected" href="#keyword-search">
-        Search
-      </a>
-    </li>
-    <li class="govuk-tabs__list-item">
-      <a class="govuk-tabs__tab" href="#browse-route">
-        Browse
-      </a>
-    </li>
-  </ul>
-   <section class="govuk-tabs__list" id="keyword-search">
-        <h2 class="govuk-heading-l"><%= t('Keyword search') %></h2>
-   <label class="govuk-label" for="event-name">
-    Keyword search
-   </label>
-  <br/>
-  <input class="govuk-input" id="event-name" name="event-name" type="text">
- <%= link_to t('common.search'), 'search_results', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.building') %>
-   </section>
- <section class="govuk-tabs__panel govuk-tabs__panel--hidden" id="browse-route">
-        <h2 class="govuk-heading-l"><%= t('.provider_information_title') %></h2>
-        <p>
-
-<div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-                <div class="govuk-checkboxes">
-                  <% browse_routes.each do |rating| %>
-                    <div class="govuk-checkboxes__item">
-                      <%= check_box_tag(
-                              "rating[]",
-                              rating,
-                              false,
-                              class: "govuk-checkboxes__input",
-                              id: "rating_#{rating}"
-                          ) %>
-                      <label class="govuk-label govuk-checkboxes__label" for="rating_<%= rating %>">
-                        <%= rating %>
-                      </label>
-                    </div>
-                  <% end %>
-                </div>
-        <ul class="govuk-list govuk-list--bullet">
-        </ul>
-<%= link_to t('common.continue'), 'find_apprentices6' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('common.continue') %>
-
-      </section>
 
 
-<br/>
-<br/>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
 
+      <span class="govuk-caption-xl"><%= t('.title_caption') %></span>
+      <h1 class="govuk-heading-xl">Building services design engineer</h1>
 
-<% end %>
+      <button type="submit" id="add-requirements-btn" class="govuk-button">
+        <%= t('.button_label') %>
+      </button>
+
+    </div>
+  </div>      
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+
+      <table class="govuk-table govuk-!-margin-top-4 govuk-!-margin-bottom-8 ccs-govuk-table--style">
+        <caption class="govuk-table__caption govuk-heading-m govuk-!-font-weight-bold"><%= t('.provider_information_title') %></caption>
+
+        <tbody class="govuk-table__body">
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header" scope="row">Level</th>
+            <td class="govuk-table__cell">60 months</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header" scope="row">Max funding</th>
+            <td class="govuk-table__cell">&pound;27,000</td>
+          </tr>          
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header" scope="row">Course ID</th>
+            <td class="govuk-table__cell">ST0372</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header" scope="row">Number of providers</th>
+            <td class="govuk-table__cell">8</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header" scope="row">Entry requirements</th>
+            <td class="govuk-table__cell">Candidates will have at least 3 A levels at grades A* to C including maths and physical science or have completed a level 3 apprenticeship as a building services design technician</td>
+          </tr> 
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header" scope="row">More information</th>
+            <td class="govuk-table__cell">The institute for Apprenticeships has a more <a href="" class="govuk-link">detailed information</a> about this apprenticeship</td>
+          </tr>                    
+        </tbody>
+      </table>
+
+    </div>
+  </div>
