input search icon img update

--- a/app/views/apprenticeships/home/find_apprentices5.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices5.html.erb
@@ -9,9 +9,7 @@
       <span class="govuk-caption-xl"><%= t('.title_caption') %></span>
       <h1 class="govuk-heading-xl">Building services design engineer</h1>
 
-      <button type="submit" id="add-requirements-btn" class="govuk-button">
-        <%= t('.button_label') %>
-      </button>
+      <%= link_to t('.button_label'), 'requirements', role: 'button', class: 'govuk-button' %>
 
     </div>
   </div>      
